--- a/package.json
+++ b/package.json
@@ -14,47 +14,47 @@
 	"author": "azrilardian",
 	"license": "ISC",
 	"devDependencies": {
-		"@babel/core": "^7.10.5",
-		"@babel/preset-env": "^7.10.4",
-		"babel-loader": "^8.1.0",
-		"clean-webpack-plugin": "^4.0.0-alpha.0",
-		"codeceptjs": "^3.0.7",
-		"copy-webpack-plugin": "^6.0.3",
-		"css-loader": "^3.6.0",
-		"eslint": "^7.28.0",
-		"eslint-config-airbnb-base": "^14.2.1",
-		"eslint-plugin-import": "^2.23.4",
+		"@babel/core": "^7.17.8",
+		"@babel/preset-env": "^7.16.11",
+		"babel-loader": "^8.2.4",
+		"clean-webpack-plugin": "^4.0.0",
+		"codeceptjs": "^3.3.0",
+		"copy-webpack-plugin": "^10.2.4",
+		"css-loader": "^6.7.1",
+		"eslint": "^8.12.0",
+		"eslint-config-airbnb-base": "^15.0.0",
+		"eslint-plugin-import": "^2.25.4",
 		"file-loader": "^6.2.0",
-		"html-webpack-plugin": "^4.3.0",
-		"imagemin-webp-webpack-plugin": "^3.3.4",
+		"html-webpack-plugin": "^5.5.0",
+		"imagemin-webp-webpack-plugin": "^3.3.6",
 		"jasmine-ajax": "^4.0.0",
-		"jasmine-core": "^3.5.0",
-		"karma": "^5.1.0",
-		"karma-chrome-launcher": "^3.1.0",
-		"karma-firefox-launcher": "^1.3.0",
-		"karma-jasmine": "^3.3.1",
-		"karma-sourcemap-loader": "^0.3.7",
-		"karma-webpack": "^4.0.2",
-		"mini-css-extract-plugin": "^1.6.0",
-		"optimize-css-assets-webpack-plugin": "^6.0.0",
-		"puppeteer": "^8.0.0",
-		"sass": "^1.34.1",
-		"sharp": "^0.28.3",
-		"style-loader": "^1.2.1",
+		"jasmine-core": "^4.0.1",
+		"karma": "^6.3.17",
+		"karma-chrome-launcher": "^3.1.1",
+		"karma-firefox-launcher": "^2.1.2",
+		"karma-jasmine": "^4.0.2",
+		"karma-sourcemap-loader": "^0.3.8",
+		"karma-webpack": "^5.0.0",
+		"mini-css-extract-plugin": "^2.6.0",
+		"optimize-css-assets-webpack-plugin": "^6.0.1",
+		"puppeteer": "^13.5.2",
+		"sass": "^1.49.10",
+		"sharp": "^0.30.3",
+		"style-loader": "^3.3.1",
 		"uglifyjs-webpack-plugin": "^2.2.0",
-		"webpack": "^4.46.0",
-		"webpack-bundle-analyzer": "^4.4.2",
-		"webpack-cli": "^3.3.12",
-		"webpack-dev-server": "^3.11.0",
-		"webpack-merge": "^5.0.9",
-		"whatwg-fetch": "^3.2.0"
+		"webpack": "^5.70.0",
+		"webpack-bundle-analyzer": "^4.5.0",
+		"webpack-cli": "^4.9.2",
+		"webpack-dev-server": "^4.7.4",
+		"webpack-merge": "^5.8.0",
+		"whatwg-fetch": "^3.6.2"
 	},
 	"dependencies": {
-		"@codeceptjs/configure": "^0.6.2",
-		"idb": "^6.1.2",
-		"node-sass": "^4.14.1",
-		"regenerator-runtime": "^0.13.5",
-		"sass-loader": "^10.2.0",
+		"@codeceptjs/configure": "^0.8.0",
+		"idb": "^7.0.1",
+		"node-sass": "^7.0.1",
+		"regenerator-runtime": "^0.13.9",
+		"sass-loader": "^12.6.0",
 		"serviceworker-webpack-plugin": "^1.0.1"
 	}
 }
